--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-node_modules/
+# Logs
+combined.log
+logs/
+
+# Environment files
 .env
-*.log
+
+# Node modules
+node_modules/
+
+# Backup archives
+*.zip
+*.tar
+*.gz
+
+# System files
+.DS_Store
+Thumbs.db
